Fix link colour in the footer to be legible

--- a/kanisa/static/kanisa/css/kanisa.css
+++ b/kanisa/static/kanisa/css/kanisa.css
@@ -13,6 +13,11 @@ body {
     margin: 0.5em;
 }
 
+#footer p a {
+    color: inherit;
+    text-decoration: underline;
+}
+
 #footer div.github {
     text-align: right;
 }
